clusters/ocp/netobserv/netobserv-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: netobserv
  labels:
    openshift.io/cluster-monitoring: "true"
